@@ -1,3 +1,9 @@
+2011-07-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-61
+	* Remove ClassCastException passing the mouse over module nodes. bug 84305
+	* Set empty scalar parameter to "None" by default in Python converter. bug 84064
+	* Add "Clone Module" feature for Paths and Sequences. (bug/feature 83912).
+
 2011-07-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-60
 	* "Deep Import" considers out of order items.
